--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mercadopago": "^2.8.0",
+    "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
     "winston": "^3.17.0"
   },
