--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mercadopago": "^2.8.0",
     "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
