--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.1.0",
     "mercadopago": "^2.8.0",
     "mongoose": "^8.17.1",
+    "mongoose-paginate-v2": "^1.9.1",
     "nodemailer": "^7.0.5",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
