--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec node --loader ts-node/esm server.js"
+    "dev": "nodemon --exec node --loader ts-node/esm server.js",
+    "clean": "rm -rf ./node_modules && rm package-lock.json && npm cache clean --force && npm install"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +19,17 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mercadopago": "^2.8.0",
     "mongoose": "^8.17.1",
     "mongoose-paginate-v2": "^1.9.1",
     "nodemailer": "^7.0.5",
-    "winston": "^3.17.0",
-    "xlsx": "^0.18.5"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/exceljs": "^1.3.0",
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.3.1",
