--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec node --loader ts-node/esm server.js",
-    "clean": "rm -rf ./node_modules && rm package-lock.json && npm cache clean --force && npm install"
+    "clean": "rm -rf ./node_modules && rm package-lock.json && npm cache clean --force && npm install",
+    "seed": "nodemon --exec node --loader ts-node/esm scripts/seedTariffData.ts"
   },
   "keywords": [],
   "author": "",
